src/test/ui/lub-if.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/lub-if.rs:28:9
   |
LL |         s
   |         ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 23:17
  --> $DIR/lub-if.rs:23:17
   |
LL | pub fn opt_str2<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 ^^

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/lub-if.rs:35:9
   |
LL |         s
   |         ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 32:17
  --> $DIR/lub-if.rs:32:17
   |
LL | pub fn opt_str3<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 ^^

error: aborting due to 2 previous errors

